# kerosene

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  OPEN_SOURCE_NOTES.md  README.md  SECURITY.md  build.rs  instance_copy.cfg
.github/workflows/: windows-release.yml  windows.yml
assets/: kerosene.desktop
assets/fonts/: README.md
audit/: candle-cache-audit.md  codebase-cleanup-long-running-prompt.md  codex-refactor-tech-debt-long-running-prompt.md  codex-refactor-tech-debt-progress.md  codex-refactor-tech-debt-report.md  networking-audit-prompt.md  order-lifecycle-hardening-redundancy-long-running-prompt.md  order-lifecycle-hardening-redundancy-progress.md  order-lifecycle-hardening-redundancy-report.md  order-lifecycle-safety-long-running-prompt.md  order-lifecycle-safety-progress.md  outcome-market-display-audit.md
design/: trading-journal-prompt.md
docs/: README.md  alfred.md  journal-chart-snapshots-plan.md  journal.md  liquidation-feed-ui-audit.md  optimistic-updates.md  order-lifecycle-refactor-audit.md  telegram-feed.md  x-feed.md
docs/advanced-orders/: chase-lifecycle-graphic.html  chase-metrics-audit.md  chase-orders.md  twap-orders.md
docs/architecture/: elm-runtime.md  state-map.md  subscriptions-and-tasks.md  system-overview.md
docs/components/: account-wallet-portfolio.md  alfred-command-surface.md  charting-and-canvas.md  integrations-and-feeds.md  journal-and-analytics.md  layouts-windows-and-panes.md  market-data-and-symbols.md  settings-preferences-and-theme.md  trading-and-order-execution.md  volatility-metrics.md
docs/operations/: configuration-and-persistence.md  development-guide.md  security-and-secrets.md  testing-validation-packaging.md
packaging/macos/: Info.plist.in
packaging/windows/: Kerosene.wxs
scripts/: package-macos.sh  package-windows.ps1  package.sh  run-onboarding.sh
src/: account.rs  account_analytics.rs  account_metrics.rs  account_positions.rs  account_state.rs  account_update.rs  account_views.rs  add_widget_menu.rs  advanced_order_history.rs  alfred_state.rs  alfred_update.rs  alfred_views.rs  annotation_update.rs  annotations.rs  api.rs  api_cache.rs  app_boot.rs  app_fonts.rs  app_state.rs  app_theme.rs  app_time.rs  app_update.rs  assistant.rs  assistant_update.rs  assistant_views.rs  calendar_state.rs  calendar_update.rs  calendar_views.rs  chart.rs  chart_background.rs  chart_screenshot.rs  chart_state.rs  chart_update.rs  chart_views.rs  chrome_update.rs  config.rs  config_persistence.rs  denomination.rs  depth_chart.rs  feed_state.rs  (+82 more)
src/account/: data.rs  http.rs  position_metrics.rs  spot.rs  spot_cost_basis.rs  types.rs  wallets.rs
src/account_analytics/: http.rs  income.rs  model.rs  portfolio.rs
src/account_metrics/: tests.rs
src/account_state/: add_window.rs  journal.rs  persistence.rs  picker.rs  switching.rs  types.rs
src/account_update/: add_window.rs  connection.rs  (+5 more)
(+1745 files in other folders)
